tests/typing/fail/redef-02.stderr
error: variable `hello` is defined twice
 --> tests/typing/fail/redef-02.rs:9:9
  |
9 |         hello : int = hello;
  |         ^^^^^
  |
help: the variable was previously defined here
 --> tests/typing/fail/redef-02.rs:8:9
  |
8 |         hello : int = hello,
  |         ^^^^^
